preparation to publish

--- a/src/Extensions.Result/Extensions.Result.csproj
+++ b/src/Extensions.Result/Extensions.Result.csproj
@@ -4,6 +4,28 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>The simple library that provide result type</Title>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/delaynore/Extensions.Result</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/delaynore/Extensions.Result</PackageProjectUrl>
+    <Authors>Delaynore</Authors>
+	<Version>0.0.1</Version>
+	<PackageTags>result option</PackageTags>
+	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
